--- a/index.html
+++ b/index.html
@@ -15,11 +15,25 @@
 
 </head>
 
-<body style="background-color: rgb(17, 17, 68);">
+<body>
+
+    <h1>Contagem de Número</h1>
+
+    <form action="">
+        <p>INICIO <input type="number" name="inicio" id="i-inicio"></p>
+
+    <p>FIM: <input type="number" name="fim" id="i-fim"></p>
+
+    <p>PASSOS: <input type="number" name="passos" id="i-passos"></p>
+
+    <input type="submit" value="Contar" onclick="contar()">
+
+    <p id=resp >-----</p>
 
     
 
     <script src="js/script-while.js"></script>
+    </form>
 </body>
 
 </html>
